# MB-TSP

./: .dockerignore  .env.example  .gitignore  ALGORITHMS.md  CHANGELOG.md  DOCKER.md  Dockerfile  Makefile  README.md  astar.py  docker-compose.yml  main.py  map_processor.py  models.py  pyproject.toml  rabbitmq_handler.py  test_example.py  test_tsp_algorithms.py  tsp_solver.py
.github/workflows/: docker-publish.yml
